welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: ')' expected but '<-' found.
	for (j<-0 to (i <- 0 to T.length-1)){
                        ^indexOfValue:10: error: ')' expected but '}' found.
}
^